[dev]detail refactoring: get detail data by url

--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,7 @@
                         </button>
                         <div class="collapse navbar-collapse" id="navbarNavDropdown">
                             <div class="navbar-nav">
-                                <a class="nav-item nav-link" href="{% url 'accounting:detail' %}">明細</a>
+                                <a class="nav-item nav-link" href="{% url 'accounting:detail' date=current_year_month %}">明細</a>
                                 <!-- <a class="nav-item nav-link" href="#">總表</a>
                                 <div class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink"
