[dev]add user info view

--- a/templates/login.html
+++ b/templates/login.html
@@ -12,7 +12,7 @@
         <td width="70%" class="section-input">
             <!-- {{form.username}} -->
             <input type="text" name="username" class="form-control" required="" id="id_username" placeholder="請輸入E-MAIL">
-            <span class="errMsg" id="acc-errMsg"></span>
+            <span class="errMsg" id="username-errMsg"></span>
         </td>
     </tr>
     <tr style="height:60px">
