--- a/templates/registration.html
+++ b/templates/registration.html
@@ -15,7 +15,7 @@
             {% for error in form.username.errors %}
             <span class="errMsg">{{ error }}</span>
             {% endfor %}
-            <span class="errMsg" id="acc-errMsg"></span>
+            <span class="errMsg" id="username-errMsg"></span>
         </td>
     </tr>
     <tr style="height:60px">
