--- a/templates/base.html
+++ b/templates/base.html
@@ -48,7 +48,8 @@
                                 </div> -->
                             </div>
                             <div class="navbar-nav ml-auto">
-                                <a class="nav-item nav-link" href="#">使用者</a>
+                                <a class="nav-item nav-link disabled" href="#">Hello, {{ request.user.name }}</a>
+                                <a class="nav-item nav-link" href="{% url 'users:info' %}">Account</a>
                                 <a class="nav-item nav-link" href="{% url 'users:logout' %}">登出</a>
                             </div>
                         </div>
