--- a/templates/base.html
+++ b/templates/base.html
@@ -7,10 +7,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
+    <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
     <script src="{% static 'js/jquery-3.7.1.js' %}"></script>
     <script src="{% static 'js/base.js' %}"></script>
     <title>{% block title %}RichMan{% endblock %}</title>
-    <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
     {% block link_file %}{% endblock %}
 </head>
 
@@ -20,8 +21,8 @@
         <div class="container" style="height: 120px; padding: 20px 0px;">
             <div class="row" style="height: 100%; padding: 0px;">
                 <!-- Logo -->
-                <div class="col-md-3  col-9">
-                    <img src="{% static 'img/logo.png' %}" width="90%">
+                <div class="col-md-3  col-9 text-center">
+                    <img src="{% static 'img/logo.png' %}" width="200px" class="img-fluid" style="margin: auto;" alt="INeedMoney">
                 </div>
 
                 <!-- NabBar -->
@@ -35,20 +36,22 @@
                         <div class="collapse navbar-collapse" id="navbarNavDropdown">
                             <div class="navbar-nav">
                                 <a class="nav-item nav-link" href="{% url 'accounting:detail' date=current_year_month %}">明細</a>
-                                <!-- <a class="nav-item nav-link" href="#">總表</a>
+                                <!-- <a class="nav-item nav-link" href="#">總表</a> -->
                                 <div class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink"
                                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                         設定
                                     </a>
                                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                        <a class="dropdown-item" href="#">分類</a>
-                                        <a class="dropdown-item" href="#">標籤</a>
+                                        <a class="dropdown-item" href="{% url 'accounting:category' %}">分類</a>
+                                        <!-- <a class="dropdown-item" href="#">標籤</a> -->
                                     </div>
-                                </div> -->
+                                </div>
                             </div>
                             <div class="navbar-nav ml-auto">
+                                {% if request.user.is_authenticated %}
                                 <a class="nav-item nav-link disabled" href="#">Hello, {{ request.user.name }}</a>
+                                {% endif %}
                                 <a class="nav-item nav-link" href="{% url 'users:info' %}">Account</a>
                                 <a class="nav-item nav-link" href="{% url 'users:logout' %}">登出</a>
                             </div>
