--- a/templates/detail.html
+++ b/templates/detail.html
@@ -54,7 +54,7 @@
     <!-- Left Container -->
     <div class="col-md-10 col-12">
         <!-- tool bar -->
-        <div class="col-12 row" style="margin: 0;">
+        <div style="margin: 0;">
             <!-- Button trigger modal -->
             <button type="button" class="btn btn-dark" data-toggle="modal" data-target="#editModal" data-title="新增" data-id="insert">
                 新增
@@ -131,13 +131,6 @@
     var api_del = "{% url 'accounting:delExpense' %}",
         api_getEditExpense = "{% url 'accounting:getEditExpense' %}",
         api_saveExpense = "{% url 'accounting:saveExpense' %}";
-
-    var currentUrl = window.location.pathname,
-        parts = currentUrl.split('/'),
-        dateParam = parts[parts.length - 2];
-
-    var url_pre_detail=`{% url 'accounting:detail' date=pre_date %}`,
-        url_next_detail=`{% url 'accounting:detail' date=next_date %}`;
 </script>
 <!-- include your js files -->
 <script src="{% static 'js/detail.js' %}"></script>
