--- a/templates/user-info.html
+++ b/templates/user-info.html
@@ -8,7 +8,7 @@
 {% block body %}
 <div class="row justify-content-center align-items-center">
     <div class=" col-12 col-md-10 row">
-        <div class="col-md-3 col-12" style="background-color: blue;">
+        <div class="col-md-3 col-12" style="background-color: #f3f3f3;">
         </div>
         <div class="col-md-9 col-12 row">
             <div class="col-md-6 col-12">
